[package]
name = "lazarust"
version = "0.1.0"
authors = ["dmonzonis <dmonzonis@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_distr = "0.2"

[dev-dependencies]
assert_approx_eq = "1.1.0"
lazy_static = "1.4"
